# tri_database_chatbot

./: .gitignore  .pre-commit-config.yaml  .roomodes  CONTRIBUTING.md  Code_Base_Support-deprecated.md  Makefile  README.md  analysis_code_referrence.md  docker-compose.yml
.github/workflows/: nodejs-ci.yml  python-ci.yml
charts/chatbot_service/: Chart.yaml  values.yaml
charts/chatbot_service/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
charts/mcp_service/: Chart.yaml  values.yaml
charts/mcp_service/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
charts/neo4j_mock/: Chart.yaml  values.yaml
charts/neo4j_mock/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
charts/relational_mock/: Chart.yaml  values.yaml
charts/relational_mock/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
charts/weaviate_mock/: Chart.yaml  values.yaml
charts/weaviate_mock/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
docs/: project_goal.md  revised_project_goal.md  test_plan.md  test_results.md
scripts/: setup-prereqs.sh
services/chatbot_service/: .coverage  Dockerfile  pyproject.toml
services/chatbot_service/analysis_results/: pydeps_results.json
services/chatbot_service/src/: main.py
services/chatbot_service/tests/: test_main.py
services/db_mocks/neo4j_mock/: .coverage  Dockerfile  pyproject.toml
services/db_mocks/neo4j_mock/src/: main.py
services/db_mocks/neo4j_mock/tests/: test_main.py
services/db_mocks/relational_mock/: .coverage  Dockerfile  pyproject.toml
services/db_mocks/relational_mock/src/: main.py
services/db_mocks/relational_mock/tests/: test_main.py
services/db_mocks/weaviate_mock/: .coverage  Dockerfile  pyproject.toml
services/db_mocks/weaviate_mock/src/: main.py
services/db_mocks/weaviate_mock/tests/: test_main.py
services/mcp_service/: .coverage  Dockerfile  README.md  pyproject.toml  src.json
services/mcp_service/analysis_results/: copydetect_report.html  radon_cc_results.json  ruff_results.json
services/mcp_service/services/db_mocks/neo4j_mock/tests/integration/: pyproject.toml
services/mcp_service/src/: calculator.py  main.py
services/mcp_service/tests/: test_main.py
templates/nodejs-vitest/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
templates/nodejs-vitest/src/: main.test.tsx  setupTests.ts
templates/nodejs-vitest/src/__mocks__/: handlers.ts
templates/nodejs-vitest/src/components/: Greeting.test.tsx  Greeting.tsx
templates/python-uv/: Dockerfile  pyproject.toml
templates/python-uv/src/: calculator.py
templates/python-uv/tests/: test_calculator.py
templates/python_uv/: .dockerignore  pyproject.toml  report.html
templates/python_uv/src/: calculator.py
tests/integration/: conftest.py  pyproject.toml  test_service_communication.py  test_system.py
