# Project metadata and dependencies defined according to PEP 621
[project]
name = "mcp-service"
version = "0.1.0"
description = "Model Context Protocol (MCP) Service - Central routing hub for database connections"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ # Core application dependencies
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "pydantic>=2.6.3",
]

[project.optional-dependencies] # Optional dependencies for development and testing
dev = [ # Development dependencies, installed via `uv pip install -e .[dev]` or `uv sync --all-extras`
    "pytest>=8.3.5",     # Test runner for Python (TDD)
    "pytest-cov",        # Pytest plugin for coverage reporting
    "pre-commit>=3.7.1", # Framework for managing pre-commit hooks (code quality)
    "pip-audit>=2.8.0",  # Tool for auditing dependencies for known vulnerabilities
    "radon>=6.0.1",      # Static analysis: complexity metrics
    "copydetect>=0.5.0", # Static analysis: code duplication detection
    "pydeps>=3.0.1",     # Static analysis: dependency graph generation
    "ruff",              # Fast Python linter and code formatter
    "httpx>=0.27.0",     # HTTP client for testing FastAPI applications
]

[tool.pytest.ini_options] # Configuration for the pytest test runner
pythonpath = ["src"] # Allows pytest to find modules in the project root (src)

[tool.uv.workspace]
members = [
    "services/db_mocks/neo4j_mock/tests/integration",
]
