# Project metadata and dependencies defined according to PEP 621
[project]
name = "python-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11" # Specifies the minimum Python version required
dependencies = [ # Core application dependencies
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
]

[project.optional-dependencies] # Optional dependencies for development and testing
dev = [ # Development dependencies, installed via `uv pip install -e .[dev]` or `uv sync --all-extras`
    "pytest>=8.3.5",     # Test runner for Python (TDD)
    "pytest-cov",        # Pytest plugin for coverage reporting
    "pre-commit>=3.7.1", # Framework for managing pre-commit hooks (code quality)
    "pip-audit>=2.8.0",  # Tool for auditing dependencies for known vulnerabilities
    "radon>=6.0.1",      # Static analysis: complexity metrics
    "copydetect>=0.5.0", # Static analysis: code duplication detection
    "pydeps>=3.0.1",     # Static analysis: dependency graph generation
    "ruff",              # Fast Python linter and code formatter
]

[tool.pytest.ini_options] # Configuration for the pytest test runner
pythonpath = ["."] # Allows pytest to find modules in the project root (src)
