[project]
name = "integration-tests"
version = "0.1.0"
description = "Integration tests for the chatbot system"
requires-python = ">=3.8"
dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "pytest-asyncio>=0.21.0",
    "docker>=6.1.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v -s"
asyncio_mode = "auto"

[tool.pytest-asyncio]
default_fixture_loop_scope = "function"
