[project]
name = "relational-mock"
version = "0.1.0"
description = "Relational database mock service for chatbot project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.5", "pytest-cov", "httpx>=0.27.0", "ruff"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
